Test: membership 등록/수정